# Echoflow-Voice-Pipeline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
src/: __init__.py  config.py  main.py
src/monitoring/: __init__.py  database.py  latency_tracker.py  visualizer.py
src/pipeline/: __init__.py  asr.py  llm_client.py  models.py  orchestrator.py  tts.py
src/resilience/: __init__.py  circuit_breaker.py  degradation.py  timeout.py
tests/: conftest.py  test_backends.py  test_cli.py  test_pipeline.py
