[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realtime-multimodal"
version = "1.0.0"
description = "Real-time multimodal streaming pipeline: ASR -> LLM -> TTS with latency monitoring and resilience"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pyaudio>=0.2.13",
    "openai>=1.0",
    "anthropic>=0.30",
    "edge-tts>=6.0",
    "pyttsx3>=2.90",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "SpeechRecognition>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local = [
    "transformers>=4.36",
    "torch>=2.0",
    "accelerate>=0.25",
    "librosa>=0.10",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
voice-assistant = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
